Update MainStackPaneController.java